[package]
name = "the_nurse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = "1.0.197"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
testcontainers = "=0.15.0"
testcontainers-modules = "=0.3.5"
